@@ -1,4 +1,4 @@
-.\" RCSid "$Id: vwright.1,v 1.5 2007/09/04 17:36:41 greg Exp $"
+.\" RCSid "$Id: vwright.1,v 1.6 2008/03/11 02:21:46 greg Exp $"
 .TH VWRIGHT 1 8/29/96 RADIANCE
 .SH NAME
 vwright - normalize a RADIANCE view, shift it to the right
@@ -31,7 +31,7 @@ For a given prefix
 the constant names are as follows:
 .sp
 .nf
-Nt:	view type ('v'==1,'l'==2,'a'==3,'h'==4,'c'==5)
+Nt:	view type ('v'==1,'l'==2,'a'==3,'h'==4,'c'==5,'s'==6)
 Npx:	view point x value
 Npy:	view point y value
 Npz:	view point z value
